<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_marginStart="150dp"
        android:src="@drawable/enquiry_bk"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="40dp"
    android:background="@drawable/detail_white_design"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:id="@+id/pic_layout"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="7"
    android:layout_height="70dp"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:padding="5dp"
        android:id="@+id/userImg"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_weight="2"/>

    <Button
        android:background="@drawable/uploadphotouser"
        android:layout_weight="2"
        android:id="@+id/userPicUpload"
        android:layout_height="70dp"
        android:layout_width="0dp"
      />
    <TextView
        android:id="@+id/regText"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>

</LinearLayout>
    <EditText
        android:hint="Name"
        android:id="@+id/userName"
        android:textSize="20sp"
        android:layout_width="360dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@drawable/detail_white_black"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pic_layout"/>
    <EditText
        android:hint="@string/email"
        android:id="@+id/registeremail"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="360dp"
        android:textColor="@color/black"
        android:background="@drawable/detail_white_black"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/userName"/>

    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_below="@+id/registeremail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/detail_white_black"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/parentsEmail"
        android:hint="Parents Email-id"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="360dp"
        android:textSize="20sp"
        android:background="@drawable/detail_white_black"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registerpassword"/>
    <EditText
        android:id="@+id/phone"
        android:hint="Parent Phone no"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_width="360dp"
        android:background="@drawable/detail_white_black"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/parentsEmail"/>

    <Button
        android:id="@+id/registerbutton"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@drawable/button_formatting"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phone"/>
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/alreadyregistered"
        android:layout_below="@+id/registerbutton"
        android:layout_centerHorizontal="true"
        android:text="@string/alreadyregistered"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/regToLog"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signin"

        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/alreadyregistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>
</ScrollView>
    <ProgressBar
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:id="@+id/authProgress"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RelativeLayout>
