<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:id="@+id/changing_img"
    android:background="@drawable/good_morning_img">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">


        <TextView
            android:id="@+id/loginauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="Good Morning"
            android:textColor="@color/white"

            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginauth"
            android:layout_marginStart="20dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_below="@+id/logintext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_formatting"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_formatting"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_formatting"
            android:padding="10dp"
            android:text="Sign In"
            android:layout_marginBottom="70dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />




        <ProgressBar
            android:id="@+id/logprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>